Modifications based on feedback

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="https://www.gstatic.com/devrel-devsite/prod/v85aee14ad439a087d9e958f223735d57cdfda16a7f6497504c9ce4a10dce0396/chrome/images/favicon.png"
-    />
+    <link rel="icon" href="public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive DNR Tool</title>
   </head>
