--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Interactive DNR Tool</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="width: 100%"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
